[tool.poetry]
name = "wine"
version = "0.1.0"
description = "CML basics"
authors = ["Rafael da Silva <rs.rafaeldasilva@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
